svirpti/tests/snapshots/simple__check_multiple_errors-4.snap
---
source: svirpti/tests/simple.rs
expression: errors
---
- failing_assertion: l2
  trace:
    - 0
    - 1
    - 3
  labels:
    - bb3
  model:
    variables:
      x@0:
        Int: 0
- failing_assertion: l1
  trace:
    - 0
    - 1
    - 2
  labels:
    - bb2
  model:
    variables:
      x@0:
        Int: 1
